# living-codex

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Living Codex Design Documentation.txt  README.md  docker-compose.yml  polished-watching-pizza.md  pyproject.toml
.claude/: settings.local.json
docs/: operating-manual.md
docs/sysadmin/: living-codex-deployment.md
plans/: living-codex-plan.md  phase1-plan.md  phase2-plan.md  phase3-plan.md
scripts/: approve.py  inspect_staged.py  seed.py  seed_players.py  setup_rclone.sh  show_entities.py
src/living_codex/: __init__.py  bot.py  config.py  database.py  formatter.py  main.py  search.py
src/living_codex/ai/: __init__.py  claude.py  codex_rules.md  gemini.py  gemini_pro.py  prompts.py  router.py
src/living_codex/commands/: codex.py
src/living_codex/scribe/: pipeline.py  watcher.py
src/living_codex/sync/: foundry.py  guard.py  push.py
tests/: conftest.py  test_approve.py  test_context_assembly.py  test_database.py  test_formatter.py  test_foundry.py  test_gemini.py  test_lore_docs.py  test_pipeline.py  test_search.py  test_systems.py
